2011-09-30  Kirit Saelensminde  <kirit@felspar.com>
 The host constructors now normalise to lower case any host name they are given.
 We can now pass in a handler function to the HTTP server request for use when testing server responses.

2011-08-15  Kirit Saelensminde  <kirit@felspar.com>
 Connection errors now report the host and port they're trying to connect to.
 The pop3 tests now allow the server to be configured, and it is more aggresive in keeping the mailbox empty.
 The pop client includes some extra logging describing what it is doing.
 Made a change to the TCP time out handling to support the version of gcc that Macs use.

2011-07-30  Kirit Saelensminde  <kirit@felspar.com>
 Made some changes to support Boost 1.46.0.

2011-07-22  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug that was causing occasional data packets to be lost when sending large blocks of data.

2011-04-13  Kirit Saelensminde  <kirit@felspar.com>
 Implemented a proper exception type for a particular networking error.

2011-04-10  Kirit Saelensminde  <kirit@felspar.com>
 Improved the time out handling for large downloads where the download size is known in advance.
 Added in a connect timeout which defaults to ten seconds.

2011-03-02  Kirit Saelensminde  <kirit@felspar.com>
 Implemented a more full version of the email address parser so it can handle names as well as well as email addresses.

2011-02-11  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug that was causing the protocol to be lost when a relative URL was being generated.

2010-12-10  Kirit Saelensminde  <kirit@felspar.com>
 The URL parser now supports (at least some) custom query string formats. Also added in limited %XX decoding in the query string values.

2010-11-16  Kirit Saelensminde  <kirit@felspar.com>
 Added a very simple HTTP PUT based log sink for shipping logs to another machine.

2010-11-04  Kirit Saelensminde  <kirit@felspar.com>