@@ -164,6 +164,14 @@ namespace fostlib {
         /// Performs the coercion
         url::filepath_string coerce( const boost::filesystem::wpath &s );
     };
+    /// Allow a file specification to be turned into a path.
+    template<>
+    struct FOST_INET_DECLSPEC coercer<
+        boost::filesystem::wpath, url::filepath_string
+    > {
+        /// Performs the coercion
+        boost::filesystem::wpath coerce( const url::filepath_string &s );
+    };
 
     /// Allow a string to be turned into a URL query object
     template<>
