@@ -1,3 +1,6 @@
+2011-10-01  Kirit Saelensminde  <kirit@felspar.com>
+ We can now coerce from a URL file specification to a Boost filesystem wpath.
+
 2011-09-30  Kirit Saelensminde  <kirit@felspar.com>
  The host constructors now normalise to lower case any host name they are given.
  We can now pass in a handler function to the HTTP server request for use when testing server responses.
